--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "buffer": "^5.1.0",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.53.3"
   },
